--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -1,12 +1,39 @@
-@book{nodejs,
+@book{imbalanced-classification,
   author    = {Bartosz Krawczyk and Mikel Galar and Łukasz Jelen and Francisco Herrera},
   title     = {\textit{Evolutionary undersampling boosting for imbalanced classification of breast cancer malignancy}},
   year      = {2015},
   publisher = {Elsevier}
 }
 
-@misc{jenkins-tutorial,
+@misc{neural-networks,
+  author    = {Raul Rojas},
+  title     = {\textit{Neural Networks - A Systematic Introduction}},
+  year      = {1996},
+  howpublished = {\url{https://page.mi.fu-berlin.de/rojas/neural/}}
+}
+
+@misc{elm,
+  author    = {Guang-Bin Huang},
+  title     = {\textit{What are Extreme Learning Machines?}},
+  year      = {2015},
+  howpublished = {\url{http://www.ntu.edu.sg/home/egbhuang/pdf/ELM-Rosenblatt-Neumann.pdf}}
+}
+
+@misc{neural-deeplearning,
+  title        = {Neural Networks and Deep Learning},
+  howpublished = {\url{http://neuralnetworksanddeeplearning.com/}},
+  note         = {Aktualne dnia: 2016-06-01}
+}
+
+@misc{scikit-learn-docs,
   title        = {Scikit-learn documentation},
   howpublished = {\url{http://scikit-learn.org/dev/documentation.html}},
-  note         = {Aktualne dnia: 2016-05-28}
+  note         = {Aktualne dnia: 2016-06-01}
+}
+
+@misc{intro-to-machine-learning,
+  author    = {Alex Krot},
+  title        = {Introduction to Machine Learning with Python and Scikit-Learn},
+  howpublished = {\url{http://kukuruku.co/hub/python/introduction-to-machine-learning-with-python-andscikit-learn}},
+  note         = {Aktualne dnia: 2016-06-01}
 }
