--- a/docs/main.tex
+++ b/docs/main.tex
@@ -32,6 +32,7 @@
 \usepackage{tikz}                       % modelowanie wykresów
 \usepackage{longtable}                  % rozkładanie tabel na kilka stron
 \usepackage{cite}                       % cytowanie
+\usepackage{enumitem}                   % dodatkowe opcje dla enumerate, itemize
 
 %----------------------------------------------------------------------------------------
 %	PREAMBUŁA: DEFINICJE KOMEND
