--- a/docs/wstep.tex
+++ b/docs/wstep.tex
@@ -1,8 +1,12 @@
 \chapter{Wstęp}
+
 \section{Cele i założenia projektowe}
+
 Celem projektu było zapoznanie się z tematem uczenia maszynowego, a konkretnie z sieciami neuronowymi.
-Realizacja projektu miała umożliwić zrozumienie zasady działania oraz porównanie wydajności sieci neuronowych używających propagacji wstecznej oraz wariantu o nazwie \textit{Extreme Learning Machines,} na podstawie analizy danych pacjentów.
+Realizacja projektu miała umożliwić zrozumienie zasady działania oraz porównanie wydajności sieci neuronowych używających propagacji wstecznej oraz wariantu o nazwie \textit{Extreme Learning Machines}, na podstawie analizy danych pacjentów.
+
 \section{Wstęp teoretyczny}
+
 Rozwój uczenia maszynowego w ostatnich latach jest bardzo ważny z punktu widzenia wielu dziedzin, jednak szczególnie ważny dla medycyny.
 
 Komputery stają się szybsze i są w stanie przetwarzać większe ilości danych, co przekłada się na możliwość użycia ich do analizowania np. wyników badań.
